--- a/JCKZ.ioc
+++ b/JCKZ.ioc
@@ -1,24 +1,34 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-10\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.IPParameters=Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.ContinuousConvMode=DISABLE
+ADC1.DataAlign=ADC_DATAALIGN_RIGHT
+ADC1.DiscontinuousConvMode=DISABLE
+ADC1.EnableAnalogWatchDog=false
+ADC1.EnableRegularConversion=ENABLE
+ADC1.ExternalTrigConv=ADC_SOFTWARE_START
+ADC1.IPParameters=Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,NbrOfConversionFlag,master,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,EnableRegularConversion,NbrOfConversion,ExternalTrigConv,InjNumberOfConversion,EnableAnalogWatchDog
+ADC1.InjNumberOfConversion=0
+ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-10\#ChannelRegularConversion=1
 ADC1.SamplingTime-10\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.ScanConvMode=ADC_SCAN_DISABLE
 ADC1.master=1
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,FootprintOK
+FREERTOS.Tasks01=TaskModbusRec,0,128,FuncModbusRec,Default,NULL,Dynamic,NULL,NULL;TaskDataProc,0,128,FuncDataProc,Default,NULL,Dynamic,NULL,NULL;TaskModbusSend,0,128,FuncModbusSend,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
 Mcu.IP1=DAC
-Mcu.IP2=I2C1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM6
-Mcu.IP7=TIM7
-Mcu.IP8=USART1
-Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IP2=FREERTOS
+Mcu.IP3=I2C1
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=USART1
+Mcu.IPNb=8
 Mcu.Name=STM32F103V(C-D-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=OSC_IN
@@ -46,39 +56,37 @@ Mcu.Pin28=PD0
 Mcu.Pin29=PD1
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin30=PD2
-Mcu.Pin31=PD5
-Mcu.Pin32=PD6
-Mcu.Pin33=PB6
-Mcu.Pin34=PB7
-Mcu.Pin35=VP_SYS_VS_ND
-Mcu.Pin36=VP_SYS_VS_Systick
-Mcu.Pin37=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin38=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin31=PB6
+Mcu.Pin32=PB7
+Mcu.Pin33=VP_FREERTOS_VS_ENABLE
+Mcu.Pin34=VP_SYS_VS_ND
+Mcu.Pin35=VP_SYS_VS_tim4
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=39
+Mcu.PinsNb=36
 Mcu.UserConstants=
 Mcu.UserName=STM32F103VCTx
 MxCube.Version=4.22.0
 MxDb.Version=DB.4.0.220
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true
+NVIC.ADC1_2_IRQn=true\:5\:0\:false\:false\:true\:true\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
-NVIC.TIM6_IRQn=true\:0\:0\:false\:false\:true
-NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:true
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.TimeBase=TIM4_IRQn
+NVIC.TimeBaseIP=TIM4
+NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 OSC_IN.Mode=HSE-External-Oscillator
 OSC_IN.Signal=RCC_OSC_IN
 OSC_OUT.Mode=HSE-External-Oscillator
@@ -130,10 +138,6 @@ PD15.Locked=true
 PD15.Signal=GPIO_Output
 PD2.Locked=true
 PD2.Signal=GPIO_Output
-PD5.Mode=Asynchronous
-PD5.Signal=USART2_TX
-PD6.Mode=Asynchronous
-PD6.Signal=USART2_RX
 PD8.Locked=true
 PD8.Signal=GPIO_Output
 PD9.Locked=true
@@ -175,7 +179,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_DAC_Init-DAC-false-HAL,4-MX_ADC1_Init-ADC1-false-HAL,5-MX_USART1_UART_Init-USART1-false-HAL,6-MX_USART2_UART_Init-USART2-false-HAL,7-MX_TIM6_Init-TIM6-false-HAL,8-MX_TIM7_Init-TIM7-false-HAL,9-MX_I2C1_Init-I2C1-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_DAC_Init-DAC-false-HAL,4-MX_ADC1_Init-ADC1-false-HAL,5-MX_USART1_UART_Init-USART1-false-HAL,6-MX_I2C1_Init-I2C1-false-HAL
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=72000000
@@ -224,15 +228,10 @@ SH.COMP_DAC2_group.ConfNb=1
 USART1.BaudRate=19200
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
-USART2.BaudRate=19200
-USART2.IPParameters=VirtualMode,BaudRate
-USART2.VirtualMode=VM_ASYNC
+VP_FREERTOS_VS_ENABLE.Mode=Enabled
+VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
 VP_SYS_VS_ND.Mode=No_Debug
 VP_SYS_VS_ND.Signal=SYS_VS_ND
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
-VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
+VP_SYS_VS_tim4.Mode=TIM4
+VP_SYS_VS_tim4.Signal=SYS_VS_tim4
 board=JCKZ
