以前修改没有备份

--- a/JCKZ.ioc
+++ b/JCKZ.ioc
@@ -155,7 +155,7 @@ PE8.Signal=GPIO_Output
 PE9.Locked=true
 PE9.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
+ProjectManager.AskForMigrate=false
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
